src/objects/TAX__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TAX_Percentage__c</fullName>
        <label>TAX Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TAX_State__c</fullName>
        <label>TAX State</label>
        <picklist>
            <picklistValues>
                <fullName>ANDHRA PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIHAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANDIGARH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHATTISGARH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUJARAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARYANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIMACHAL PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JHARKHAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KARNATAKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KERALA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MADHYA PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAHARASHTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORISSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUNJAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAJASTHAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAMIL NADU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTTAR PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTTARAKHAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST BENGAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>TAX</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TAX</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>